LAU-75 Set up the project